--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<div class="container">
 		<h1>Header 1</h1>
 		<h2>Header 2</h2>
-		<p>Pargraph</p>
+		<p>Paragraph 1</p>
+		<p>Paragraph 2</p>
 	</div>
 </body>
 </html>
